<resources>
    <string name="app_name">Rajkot Explore</string>
<!--    <string name="title_home">Home</string>-->
<!--    <string name="title_dashboard">Dashboard</string>-->
<!--    <string name="title_notifications">Notifications</string>-->
<!--    <string name="search_icon">Search</string>-->
    <string name="version_1.0">Version 1.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">Feedback</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share app with friends</string>
    <string name="info1">Info 1</string>
    <string name="info2">Info 2</string>
    <string name="events">Events</string>
    <string name="view_all">View All</string>
    <string name="arrow">Arrow</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="university">University</string>
    <string name="more">More</string>

</resources>