<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="173dp"
            android:layout_height="206dp"
            android:layout_marginStart="109dp"
            android:layout_marginTop="196dp"
            android:layout_marginEnd="110dp"
            android:layout_marginBottom="273dp"
            android:scaleType="centerCrop"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtAppName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="448dp"
            android:layout_marginEnd="293dp"
            android:layout_marginBottom="211dp"
            android:text="About"
            android:textColor="#090909"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="418dp"
            android:layout_marginEnd="189dp"
            android:layout_marginBottom="246dp"
            android:text="@string/share"
            android:textColor="#D60A0A0A"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtRate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="485dp"
            android:layout_marginEnd="300dp"
            android:layout_marginBottom="182dp"
            android:text="@string/rate_us"
            android:textColor="#D60A0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="511dp"
            android:layout_marginEnd="287dp"
            android:layout_marginBottom="156dp"
            android:text="@string/feedback"
            android:textColor="#D60A0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="541dp"
            android:layout_marginEnd="279dp"
            android:layout_marginBottom="126dp"
            android:text="@string/contact_us"
            android:textColor="#D60A0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtPolicy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="572dp"
            android:layout_marginEnd="261dp"
            android:layout_marginBottom="95dp"
            android:text="@string/privacy_policy"
            android:textColor="#D60A0A0A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="154dp"
            android:layout_marginTop="642dp"
            android:layout_marginEnd="154dp"
            android:layout_marginBottom="1dp"
            android:text="@string/version_1.0"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Input -->

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="47dp"
            android:layout_marginEnd="321dp"
            android:layout_marginBottom="599dp"
            android:padding="4dp"
            android:src="@drawable/ic_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="233dp"
            android:layout_height="79dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="74dp"
            android:layout_marginBottom="587dp"
            android:gravity="center"
            android:text="Settings"
            android:textColor="#0D0D0D"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnInfo1"
            android:layout_width="283dp"
            android:layout_height="74dp"
            android:layout_marginStart="58dp"
            android:layout_marginTop="109dp"
            android:layout_marginEnd="38dp"
            android:layout_marginBottom="503dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btnrkt" />

        <ImageButton
            android:id="@+id/btnInfo2"
            android:layout_width="283dp"
            android:layout_height="74dp"
            android:layout_marginStart="51dp"
            android:layout_marginTop="146dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="466dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/info2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/btnexp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
